--- a/views/category/edit.html
+++ b/views/category/edit.html
@@ -35,9 +35,9 @@
                 <hr>
                     <form action="/categories/edit" method="POST">
                         <div class="mb-3">
-                            <input type="hidden" name="id" value="{{ .Id }}">
+                            <input type="hidden" name="id" value="{{ .category.Id }}">
                             <label class="form-label">Name</label>
-                            <input type="text" class="form-control" name="name" value="{{ .Name }}" autocomplete="off">
+                            <input type="text" class="form-control" name="name" value="{{ .category.Name }}" autocomplete="off">
                           </div>
                           <div class="float-end">
                             <a href="/categories" class="btn btn-secondary">Back</a>
